# FAST-API-INVENTORY

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run  test.py  triala
alembic/versions/: 1b5d772e2340_add_a_column.py  d31f61752766_create_account_table.py
app/: main.py  models.py  schema.py  server.py
app/db/: tasks.py
core/: config.py  db.py
core_/: config.py  db.py
migrations/versions/: ca7734414d82_create_main_tables.py
