[tool.poetry]
name = "fast-api-inventory"
version = "0.1.0"
description = "flaskapi-backend"
authors = ["Maggie Chege <shikooh.maggie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.18.2"
fastapi = "^0.79.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
